--- a/src/styles/favoriteGadgets/favoriteGadgets.sass
+++ b/src/styles/favoriteGadgets/favoriteGadgets.sass
@@ -37,8 +37,10 @@
     display: grid
     grid-auto-flow: column
     grid-gap: 1vw
-    overflow: hidden
     padding-bottom: 12px
+    position: relative
+    transition: left .5s ease-in
+    left: 0
   @media screen and (max-width: 1000px)
     &-TitleWrap
       justify-content: space-between
