--- a/src/styles/common/common.sass
+++ b/src/styles/common/common.sass
@@ -67,7 +67,7 @@ body
 *:focus
   box-shadow: -2px 0 10px 0 red, 0 -2px 10px 0 red, 2px 0 10px 0 red, 0 2px 10px 0 red
 
-.ScrollWrapper
+.scrollWrapper
   overflow: hidden
 
 .linkBack, .linkForward
@@ -187,7 +187,7 @@ body
 .Content
   display: grid
   grid-gap: 2%
-  grid-template-columns: 1fr 1fr
+  grid-template-columns: 49% 49%
   grid-template-rows: max-content
   @media screen and (max-width: 1000px)
     grid-template-columns: 1fr
