+horizontal scroll by swipe

--- a/src/styles/common/common.sass
+++ b/src/styles/common/common.sass
@@ -129,6 +129,7 @@ body
         right: 0
         top: 0
         width: 100vw
+        z-index: 20
         & .Nav
           color: $colorMobileMenu
           display: initial
