--- a/src/styles/favoriteScenarios/favoriteScenarios.sass
+++ b/src/styles/favoriteScenarios/favoriteScenarios.sass
@@ -13,7 +13,7 @@
     grid-gap: 1vw
     //grid-template-columns: repeat(auto-fit, minmax(1fr, 20vw) )
     //grid-template-columns: 1fr 1fr 1fr
-    grid-template-rows: 1fr 1fr 1fr auto
+    grid-template-rows: 1fr 1fr 1fr
     //overflow: hidden
     padding: 2% 0
     position: relative
