+vertical scroll by buttons and swipe

--- a/src/styles/common/common.sass
+++ b/src/styles/common/common.sass
@@ -84,7 +84,11 @@ body
   padding: 0
   &-Item
     margin-right: 2.5%
-    opacity: 0.6
+    opacity: 0.4
+    padding: 0
+    min-width: 1.5rem
+  &-Item:hover
+    background-color: #f2ebd6
     &--active
       opacity: 1
   &-Link
