--- a/src/styles/mainContent/mainContent.sass
+++ b/src/styles/mainContent/mainContent.sass
@@ -17,12 +17,29 @@
     justify-content: space-between
     overflow: hidden
     padding: 2% 4%
+    position: relative
+    z-index: 0
     @media screen and (max-width: 1000px)
       flex-direction: column
       max-width: 100vw
       //justify-content: space-between
+    & .Nav
+      bottom: 0
+      flex-direction: column
+      height: 100%
+      justify-content: space-between
+      position: absolute
+      top: 0
+    & .Nav-Item:first-child, & .Nav-Item:last-child
+      line-height: 1
+      padding: 0
+      position: relative
+      transform: translateX(34.75vw) rotate(90deg)
+      z-index: 10
   &-Summary
-  //width: 68%
+    max-width: calc(100vw/4)
+    @media screen and (max-width: 1000px)
+      min-width: 100%
   &-Greeting
     font-size: 1.6875rem
   //font-weight: bold
@@ -59,6 +76,8 @@
     grid-gap: 1vw
     max-height: 48vh
     //grid-auto-flow: column
+    position: relative
+    top: 0
     @media screen and (max-width: 1000px)
       grid-auto-flow: column
-      margin-top: 2vmax
+      //margin-top: 2vmax
