--- a/src/styles/favoriteGadgets/favoriteGadgets.sass
+++ b/src/styles/favoriteGadgets/favoriteGadgets.sass
@@ -38,6 +38,7 @@
     display: grid
     grid-auto-flow: column
     grid-gap: 1vw
+    justify-content: start
     padding-bottom: 12px
     position: relative
     left: 0
